# email-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  PLAN.md  README.md  build.md  config.yaml.example  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  architecture.md  changelog.md  configuration.md  contributing.md  getting-started.md  gmail-setup.md  installation.md  ollama-setup.md  security.md  testing.md  troubleshooting.md  usage.md
email_agent/: __init__.py  __main__.py
email_agent/config/: __init__.py
email_agent/exceptions/: base.py
email_agent/models/: draft.py  triage.py
email_agent/ollama/: circuit_breaker.py
email_agent/processor/: importance.py  triage.py
email_agent/service/: __init__.py
email_agent/state/: __init__.py  tracker.py
scripts/: first_run.py  run_windows.ps1  stress_test.py
src/email_agent/config/: loader.py  settings.py
src/email_agent/exceptions/: __init__.py
src/email_agent/gmail/: __init__.py  auth.py  client.py  labels.py
src/email_agent/models/: __init__.py  email.py  importance.py
src/email_agent/ollama/: __init__.py  client.py
src/email_agent/processor/: __init__.py  draft.py
src/email_agent/service/: agent.py
src/email_agent/trigger/: __init__.py  polling.py
src/email_agent/workflows/: __init__.py  pipeline.py
tests/: __init__.py  conftest.py  test_circuit_breaker.py  test_exceptions.py  test_gmail_client.py  test_importance.py  test_ollama_client.py  test_pipeline.py  test_settings.py  test_state_tracker.py  test_triage.py
